@@ -1,3 +1,10 @@
+2008-02-01  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_jpeg.c: Do not try to fixup subsampling tags based on 
+	the actual jpeg data stream if the first strip/tile has zero size.
+	This is the case when GDAL creates a new file with zero sizes, closes
+	and reopens it.
+
 2008-01-07  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* tools/tiff2ps.c: fix up 64bit issues (from Edward Lam). 
